--- a/ae/index.html
+++ b/ae/index.html
@@ -203,8 +203,7 @@
                 <div class="col-lg-6">
                     <h6 class="text-primary text-uppercase">نبذة عنا</h6>
                     <h1 class="mb-4"><span class="text-primary">Dresden Motors</span> أفضل مكان لصفقة السيارات الخاصة بك</h1>
-                    <p class="mb-4">Welcome to Dresden Motors, Dubai! 
-                        Looking for new or pre-owned luxury cars for sale in Dubai at the best prices? You will find great deals on exotic and super cars here at Dresden Motors, one of Dubai's best luxury car dealerships.</p>
+                    <p class="mb-4">مرحباً بكم في دريسدن موتورز، دبي! هل تبحث عن سيارات فاخرة جديدة أو مستعملة للبيع في دبي بأفضل الأسعار؟ ستجد صفقات رائعة على السيارات الفارهة والسوبر هنا في دريسدن موتورز، أحد أفضل وكلاء السيارات الفاخرة في دبي.</p>
                     <div class="row g-4 mb-3 pb-3">
                         <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
                             <div class="d-flex">
@@ -212,8 +211,8 @@
                                     <span class="fw-bold text-secondary">01</span>
                                 </div>
                                 <div class="ps-3">
-                                    <h6>Quality & Diversity </h6>
-                                    <span>Dresden Motors boasts a diverse inventory of new and pre-owned luxury cars, including brands such as Mercedes-Benz, Rolls Royce, and Lexus.</span>
+                                    <h6>الجودة والتنوع</h6>
+                                    <span>Dresden Motors يضم مخزوناً متنوعاً من السيارات الفاخرة الجديدة والمستعملة، بما في ذلك العلامات التجارية مثل مرسيدس-بنز ورولز رويس ولكزس.</span>
                                 </div>
                             </div>
                         </div>
@@ -223,8 +222,8 @@
                                     <span class="fw-bold text-secondary">02</span>
                                 </div>
                                 <div class="ps-3">
-                                    <h6>World Famous</h6>
-                                    <span>Established in 2003, Dresden Motors is renowned as one of Dubai's top luxury car dealerships, offering great deals and a world-class customer experience.</span>
+                                    <h6>مشهور عالمياً</h6>
+                                    <span>تأسست دريسدن موتورز في عام 2003، وتشتهر دريسدن موتورز بكونها واحدة من أفضل وكلاء السيارات الفاخرة في دبي، حيث تقدم عروضاً رائعة وتجربة عملاء عالمية المستوى.</span>
                                 </div>
                             </div>
                         </div>
@@ -234,8 +233,8 @@
                                     <span class="fw-bold text-secondary">03</span>
                                 </div>
                                 <div class="ps-3">
-                                    <h6>Exceptional Service & Accessibility</h6>
-                                    <span>With three locations across the United Arab Emirates, Dresden Motors serves customers worldwide, providing exceptional service and accessibility.</span>
+                                    <h6>خدمة استثنائية وسهولة الوصول</h6>
+                                    <span>تخدم شركة دريسدن موتورز عملاءها في جميع أنحاء الإمارات العربية المتحدة من خلال ثلاثة مواقع في جميع أنحاء الإمارات العربية المتحدة، وتوفر خدمة استثنائية وسهولة الوصول إليها.</span>
                                 </div>
                             </div>
                         </div>
@@ -255,22 +254,22 @@
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                     <i class="fa fa-check fa-2x text-white mb-3"></i>
                     <h2 class="text-white mb-2" data-toggle="counter-up">21</h2>
-                    <p class="text-white mb-0">Years Experience</p>
+                    <p class="text-white mb-0">عاماً من الخبرة</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                     <i class="fa fa-users-cog fa-2x text-white mb-3"></i>
                     <h2 class="text-white mb-2" data-toggle="counter-up">200</h2>
-                    <p class="text-white mb-0">Expert Dealers</p>
+                    <p class="text-white mb-0">تاجراً خبيراً</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                     <i class="fa fa-users fa-2x text-white mb-3"></i>
                     <h2 class="text-white mb-2" data-toggle="counter-up">1454</h2>
-                    <p class="text-white mb-0">Satisfied Clients</p>
+                    <p class="text-white mb-0">عملاء راضون</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <i class="fa fa-car fa-2x text-white mb-3"></i>
                     <h2 class="text-white mb-2" data-toggle="counter-up">2143</h2>
-                    <p class="text-white mb-0">Compleate Projects</p>
+                    <p class="text-white mb-0">مشروعاً كاملاً</p>
                 </div>
             </div>
         </div>
@@ -282,8 +281,8 @@
     <div id="contact" class="container-xxl service py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="mb-3">What are you looking for ?</h1>
-                <h6 class="text-primary text-uppercase mb-5">Best car deals</h6>
+                <h1 class="mb-3">ما الذي تبحث عنه؟</h1>
+                <h6 class="text-primary text-uppercase mb-5">أفضل عروض السيارات</h6>
                 
             </div>
             <div class="row justify-content-between g-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -292,8 +291,8 @@
                         <div class="car-icon-container car-buy">
                             <img src="../en/img/icons/Sell_Car.svg" alt="">
                         </div>
-                        <h1 class="my-3">Car Buy</h1>
-                        <div>We can assist you in purchasing the best-used car and save you time. Please click here.</div>
+                        <h1 class="my-3">شراء سيارة</h1>
+                        <div>يمكننا مساعدتك في شراء أفضل سيارة مستعملة وتوفير الوقت. الرجاء الضغط هنا.</div>
                     </button>
                 </div>
                 <div class="vertical-line"></div>
@@ -302,8 +301,8 @@
                         <div class="car-icon-container car-sell">
                             <img src="../en/img/icons/Buy_Car.svg" alt="">
                         </div>
-                            <h1 class="my-3">Car Sell</h1> 
-                            <div>Interested in selling your car? Click here and complete the details form.</div>
+                            <h1 class="my-3">بيع السيارات</h1> 
+                            <div>هل أنت مهتم ببيع سيارتك؟ انقر هنا وأكمل نموذج التفاصيل.</div>
                         </div>  
                     </button>
                 </div>
@@ -324,26 +323,26 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn" data-wow-delay="0.6s">
-                        <h1 class="text-white mb-4">Leave A Request</h1>
+                        <h1 class="text-white mb-4 text-uppercase">اترك بياناتك للحصول على تعليقاتك</h1>
                         <form id="main-form">
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" name="FirstName" placeholder="First Name" style="height: 55px;">
+                                    <input type="text" class="form-control border-0" name="FirstName" placeholder="الاسم الأول" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" name="LastName" placeholder="Last Name" style="height: 55px;">
+                                    <input type="text" class="form-control border-0" name="LastName" placeholder="الاسم العائلي" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" name="email" placeholder="Email" style="height: 55px;">
+                                    <input type="email" class="form-control border-0" name="email" placeholder="البريد الإلكتروني" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" name="phone" placeholder="Phone" style="height: 55px;">
+                                    <input type="text" class="form-control border-0" name="phone" placeholder="الهاتف" style="height: 55px;">
                                 </div>
                                 <div class="col-12 w-100">  
-                                    <a class="downloadLink main-page p-3 w-100" href="js/language.js" download>Download your personal coupon!</a>
+                                    <a class="downloadLink main-page p-3 w-100" href="js/language.js" download>قم بتنزيل قسيمتك الشخصية!</a>
                                 </div>
                                 <div class="col-12">
-                                    <button class="submit-dres-form btn btn-secondary w-100 py-3" type="submit">send</button>
+                                    <button class="submit-dres-form btn btn-secondary w-100 py-3" type="submit">إرسال</button>
                                 </div>
                             </div>
                         </form>
@@ -359,7 +358,7 @@
     <div id="dealers" class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h2 class="text-primary text-uppercase mb-5">Our Best Car Dealers</h6>
+                <h2 class="text-primary text-uppercase mb-5">أفضل وكلاء السيارات لدينا</h6>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -420,7 +419,7 @@
     <div id="comments" class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
-                <h1 class="mb-5">Our Clients Say!</h1>
+                <h1 class="mb-5">ما رأي عملائنا!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
@@ -428,7 +427,7 @@
                     <h5 class="mb-0">Sophia Rodriguez</h5>
                     <p>New client</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">The service was great. Honest polite staff and good communication. Possible to contact if have questions true WhatsUp.</p>
+                    <p class="mb-0">كانت الخدمة رائعة. الموظفون صادقون ومهذبون ويتمتعون باتصال جيد. من الممكن الاتصال إذا كانت هناك أسئلة عبر الواتساب.</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -444,7 +443,7 @@
                     <h5 class="mb-0">Benjamin Carter</h5>
                     <p>Regular client</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Highly recommend for hassle-free car buying!</p>
+                    <p class="mb-0">نوصي بشدة بشراء سيارة خالية من المتاعب!</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -466,28 +465,28 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
-                    <p class="mb-4">09.00 AM - 09.00 PM</p>
+                    <h4 class="text-light mb-4">ساعات العمل</h4>
+                    <h6 class="text-light">الاثنين - الجمعة:</h6>
+                    <p class="mb-4">09.00 - 21.00</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i><a class="text-light footer-mail-link" href="mailto:advertising@teslax-cryptopay.online">advertising@teslax-cryptopay.online</a></p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="text-light mb-4">Navigate</h4>
-                    <a  data-scroll-to="#home"class="btn btn-link text-uppercase">Home</a>
-                    <a  data-scroll-to="#about" class="btn btn-link text-uppercase">About</a>
-                    <a  data-scroll-to="#contact" class="btn btn-link text-uppercase">Contact</a>
-                    <a  data-scroll-to="#dealers" class="btn btn-link text-uppercase">dealers</a>
-                    <a  data-scroll-to="#comments" class="btn btn-link text-uppercase">comments</a>
+                    <h4 class="text-light mb-4">التنقل</h4>
+                    <a  data-scroll-to="#home"class="btn btn-link text-uppercase">الصفحة الرئيسية</a>
+                    <a  data-scroll-to="#about" class="btn btn-link text-uppercase">نبذة عن</a>
+                    <a  data-scroll-to="#contact" class="btn btn-link text-uppercase">اتصل بنا</a>
+                    <a  data-scroll-to="#dealers" class="btn btn-link text-uppercase">المتعاملون</a>
+                    <a  data-scroll-to="#comments" class="btn btn-link text-uppercase">التعليقات</a>
 
 
                     
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Subscribe to our news updates!</p>
+                    <h4 class="text-light mb-4">النشرة الإخبارية</h4>
+                    <p>اشترك في تحديثات الأخبار لدينا!</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="email" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">تسجيل الدخول</button>
                     </div>
                 </div>
             </div>
@@ -509,24 +508,24 @@
             </div>
             <div class="modal-body">
                 <h4 class="modal-title text-uppercase text-center mb-3" id="exampleModalLabel">
-                    Fill out the form and download the promo coupon
+                    املأ النموذج وقم بتنزيل القسيمة الترويجية
                 </h4>
                 <form id="modal-form" action="">
                     <div class="form-floating mb-3">
-                        <input type="email" name="FirstName" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">First Name</label>
+                        <input type="text" name="FirstName" class="form-control" id="floatingName" placeholder="name@example.com">
+                        <label for="floatingName">First Name</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" name="LastName" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Last Name</label>
+                        <input type="text" name="LastName" class="form-control" id="floatingSurname" placeholder="Password">
+                        <label for="floatingSurname">Last Name</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email</label>
+                        <input type="email" name="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+                        <label for="floatingEmail">Email</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" name="phone" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Phone number</label>
+                        <input type="text" name="phone" class="form-control" id="floatingPhone" placeholder="Password">
+                        <label for="floatingPhone">Phone number</label>
                     </div>
                     <div class="text-center"> 
                             <a class="downloadLink" href="js/language.js" download>Download your personal coupon!</a>
