--- a/en/index.html
+++ b/en/index.html
@@ -331,7 +331,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn" data-wow-delay="0.6s">
-                        <h1 class="text-white mb-4">Leave A Request</h1>
+                        <h2 class="text-white mb-4 text-uppercase">leave your details for feedback</h2>
                         <form id="main-form">
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
